--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "nuxt": "^3.8.0",
+    "nuxt-mail": "^5.1.1",
     "sass": "^1.77.6",
     "vue": "^3.3.7",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "swiper": "^8.0.6"
+    "emailjs-com": "^3.2.0",
+    "swiper": "^8.0.6",
+    "vue-tippy": "^6.5.0"
   }
 }
